--- a/react-app/src/components/PostForm/CreatePostForm.css
+++ b/react-app/src/components/PostForm/CreatePostForm.css
@@ -1,10 +1,18 @@
-.create-form {
+.update-post-form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 100px 20px 100px;
-    border: 3px solid #21BFE1;
     border-radius: 10px;
+    width: 600px;
+    height: 600px;
+    margin: 50px auto;
+}
+
+.update-post-title {
+    font-family: "Oswald", sans-serif;
+    font-size: 34px;
+    margin-bottom: 0px;
+    color: #21BFE1;
 }
 
 .create-input {
@@ -24,7 +32,6 @@
 }
 
 .create-textarea {
-
     padding-top: 10px;
     padding-left: 10px;
     font-size: 14px;
