--- a/react-app/src/components/auth/LoginFormLanding.css
+++ b/react-app/src/components/auth/LoginFormLanding.css
@@ -34,6 +34,17 @@
     font-size: 16px;
 }
 
+.landing-login-input-url {
+    text-align: left;
+    height: 40px;
+    width: 450px;
+    border-radius: 10px;
+    border: 1px solid #d6d6d7;
+    transition: all .2s ease-out;
+    padding: 0 10px;
+    font-size: 16px;
+}
+
 .landing-login-input:focus {
     outline: none !important;
     border: 1px solid #21BFE1;
