--- a/react-app/src/components/auth/LoginFormLanding.css
+++ b/react-app/src/components/auth/LoginFormLanding.css
@@ -37,7 +37,7 @@
 .landing-login-input-url {
     text-align: left;
     height: 40px;
-    width: 450px;
+    width: 520px;
     border-radius: 10px;
     border: 1px solid #d6d6d7;
     transition: all .2s ease-out;
@@ -45,7 +45,8 @@
     font-size: 16px;
 }
 
-.landing-login-input:focus {
+.landing-login-input:focus,
+.landing-login-input-url:focus {
     outline: none !important;
     border: 1px solid #21BFE1;
     box-shadow: 0 0 10px #21bee1a5;
