--- a/react-app/src/components/Comments/Comments.css
+++ b/react-app/src/components/Comments/Comments.css
@@ -88,19 +88,10 @@
 
 .update-comment-form {
     padding: 40px;
-    border: 1px solid #21BFE1;
     border-radius: 10px;
 }
 
-.update-img-input {
-    text-align: center;
-    height: 40px;
-    width: 450px;
-    border-radius: 10px;
-    border: 1px solid #d6d6d7;
-    transition: all .2s ease-out;
-    padding: 0 10px;
-}
+
 
 .update-img-input:focus {
     outline: none !important;
@@ -108,22 +99,7 @@
     box-shadow: 0 0 10px #21bee1a5;
 }
 
-.update-img-button {
-    margin-top: 30px;
-    margin-right: 5px;
-    font-weight: 600;
-    font-size: 16px;
-    height: 40px;
-    width: 160px;
-    text-transform: uppercase;
-    background-color: #21BFE1;
-    color: white;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-    box-shadow: none;
-    transition: box-shadow .2s ease-out;
-}
+
 
 .update-img-button:hover {
     box-shadow: 0 0 15px #21BFE1;
@@ -146,6 +122,7 @@
     transition: all .2s ease-out;
     resize: none;
     margin-bottom: 10px;
+    margin-top: -20px;
 }
 
 .update-comment-textarea:focus {
@@ -247,4 +224,11 @@
     font-size: 20px;
     position: relative;
     top: 20px;
+}
+
+.update-comment-title {
+    font-family: "Oswald", sans-serif;
+    font-size: 30px;
+    color: #7f5ae5;
+    text-align: center;
 }
