--- a/react-app/src/components/UpdateImage/UpdateImage.css
+++ b/react-app/src/components/UpdateImage/UpdateImage.css
@@ -1,5 +1,4 @@
 .update-image-title {
-
     margin-bottom: -20px;
 }
 
@@ -8,7 +7,6 @@
     font-size: 16px;
     color: rgba(0, 0, 0, 0.579);
     text-align: center;
-
     transition: all .2s ease;
     cursor: pointer;
 }
@@ -20,9 +18,8 @@
 }
 
 .update-profile-pic-form {
-    height: 276px;
+    height: 296px;
     padding: 40px;
-    border: 1px solid #21BFE1;
     border-radius: 10px;
 }
 
@@ -32,6 +29,72 @@
 
 .aws-loading-update-img {
     position: absolute;
-    right: 44px;
-    bottom: 100px;
+    right: -25px;
+    bottom: -10px;
+}
+
+.update-post-page-title {
+    font-family: "Oswald", sans-serif;
+    font-size: 30px;
+    color: #21BFE1;
+    text-align: center;
+}
+
+.update-img-form-button-wrapper {
+    display: flex;
+    justify-content: center;
+    margin-top: -20px;
+}
+
+.update-img-input {
+    text-align: left;
+    height: 40px;
+    width: 450px;
+    border-radius: 10px;
+    border: 1px solid #d6d6d7;
+    transition: all .2s ease-out;
+    padding: 0 10px;
+}
+
+.update-img-button {
+    margin-top: 30px;
+    margin-right: 5px;
+    font-weight: 600;
+    font-size: 16px;
+    height: 40px;
+    width: 160px;
+    text-transform: uppercase;
+    background-color: #21BFE1;
+    color: white;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    box-shadow: none;
+    transition: box-shadow .2s ease-out;
+}
+
+.update-profile-img-button {
+    margin-top: 50px;
+    margin-right: 5px;
+    font-weight: 600;
+    font-size: 16px;
+    height: 40px;
+    width: 160px;
+    text-transform: uppercase;
+    background-color: #21BFE1;
+    color: white;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    box-shadow: none;
+    transition: box-shadow .2s ease-out;
+}
+
+.update-profile-img-button:hover,
+.update-img-button:hover {
+    box-shadow: 0 0 10px #21BFE1;
+}
+
+input[type="file"] {
+    display: none;
 }
