--- a/react-app/src/components/auth/LoginFormLanding.css
+++ b/react-app/src/components/auth/LoginFormLanding.css
@@ -45,9 +45,14 @@
     font-size: 16px;
 }
 
-.landing-login-input:focus,
-.landing-login-input-url:focus {
+.landing-login-input:focus {
     outline: none !important;
     border: 1px solid #21BFE1;
     box-shadow: 0 0 10px #21bee1a5;
+}
+
+.landing-login-input-url:focus {
+    outline: none !important;
+    border: 1px solid #7f5ae5;
+    box-shadow: 0 0 10px #7f5ae5;
 }
