--- a/react-app/src/components/PostForm/CreatePostPage.css
+++ b/react-app/src/components/PostForm/CreatePostPage.css
@@ -9,8 +9,8 @@
 }
 
 .create-post-page {
-    height: 99vh;
-    width: 99vw;
+    height: 100vh;
+    width: 100vw;
     background: url('https://i.imgur.com/86QHjlV.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -20,8 +20,8 @@
 }
 
 .create-post-page-form {
-    padding-top: 21vh;
-    padding-right: 22vw;
+    padding-top: 25vh;
+    padding-right: 37vw;
 }
 
 .create-post-page-title {
@@ -175,4 +175,33 @@
 .aws-input-and-upload {
     display: flex;
     position: relative;
+}
+
+@media only screen and (max-width: 1280px) {
+    .create-post-page {
+        background: url('https://i.imgur.com/86QHjlV.jpg') no-repeat right center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+    .create-post-page-form {
+        padding-top: 25vh;
+        padding-right: 0vw;
+    }
+}
+
+@media only screen and (max-device-width: 570px) {
+    .create-post-page {
+        background: url('https://i.imgur.com/86QHjlV.jpg') no-repeat right center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+
+    .create-post-page-form {
+        padding-top: 25vh;
+        padding-right: 0vw;
+    }
 }
