--- a/react-app/src/components/PostIndex/PostIndex.css
+++ b/react-app/src/components/PostIndex/PostIndex.css
@@ -152,6 +152,7 @@
     object-fit: cover;
     object-position: top;
     width: 100%;
+    background-color: black;
 }
 
 .one-post-content {
@@ -425,6 +426,44 @@
 .view-all:hover {
     color: #7F5AE5;
 }
+
+.lds-ring {
+    display: inline-block;
+    position: relative;
+    width: 160px;
+    height: 160px;
+    margin-top: 30px;
+  }
+  .lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 128px;
+    height: 128px;
+    margin: 8px;
+    border: 8px solid #21BFE1;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #21BFE1 transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
 
 @media (max-width: 1500px) {
     .featured-posts > :first-child {
