--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -26,13 +26,13 @@
 }
 
 .login-input {
-    text-align: center;
+    text-align: left;
     height: 40px;
     width: 250px;
     border-radius: 10px;
     border: 1px solid #d6d6d7;
     transition: all .2s ease-out;
-    padding: 0 8px;
+    padding: 0 10px;
 }
 
 .login-input:focus {
@@ -42,7 +42,7 @@
 }
 
 .login-button {
-    margin-top: 70px;
+    margin-top: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -93,7 +93,8 @@
 
 .login-errors {
     color: rgb(255, 0, 0);
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
     text-align: center;
     width: 350px;
     height: 40px;
