--- a/react-app/src/components/auth/LoginFormLanding.css
+++ b/react-app/src/components/auth/LoginFormLanding.css
@@ -6,13 +6,13 @@
     /* border: 3px solid rgba(0, 0, 0, 0.491); */
     border-radius: 10px;
     position: relative;
-    margin-top: 17vh;
+    margin-top: 15vh;
 }
 
 .login-logo {
     position: absolute;
     top: -80px;
-    right: 53px;
+    right: 65px;
 }
 
 .login-div-landing {
@@ -55,4 +55,17 @@
     outline: none !important;
     border: 1px solid #7f5ae5;
     box-shadow: 0 0 10px #7f5ae5;
+}
+
+.landing-page-blurb {
+    margin-top: 50px;
+}
+
+.landing-page-blurb2 {
+    margin-top: 50px;
+    margin-right: 8px;
+}
+
+.blurb {
+    color: #333;
 }
