--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -102,6 +102,13 @@
     margin-bottom: 10px;
 }
 
+.profile-title-name {
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 10px;
+    text-transform: capitalize;
+}
+
 .follow-message-buttons {
     display: flex;
 }
@@ -206,6 +213,7 @@
     display: flex;
     justify-content: space-evenly;
     margin-top: 30px;
+    text-transform: capitalize;
 }
 
 .profile-post-type-button {
