--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -95,19 +95,31 @@
     cursor: pointer;
 }
 
-@media only screen and (max-device-width: 570px) {
-    /* .landing-page-content {
-        margin-right: 5vw;
-        padding-top: 32vw;
-    } */
-
-    .landing-page {
-        height: 102vh;
-        width: 100vw;
+@media only screen and (max-device-width: 375px) {
+    html {
+        position: fixed;
     }
 
-    .landing-page-forms {
+    .login-form-landing {
         top: 300px;
+    }
+
+    .signup-form-landing {
+        top: 380px;
+    }
+}
+
+@media only screen and (max-device-width: 390px) {
+    html {
+        position: fixed;
+    }
+
+    .login-form-landing {
+        top: 500px;
+    }
+
+    .signup-form-landing {
+        top: 500px;
     }
 }
 
@@ -142,6 +154,30 @@
     .signup-form-landing {
         transform: scale(.8);
         margin-top: 0px;
+    }
+
+    .landing-page-forms {
+        margin-right: -180px;
+        padding-top: 0px;
+    }
+
+    .landing-user-logo {
+        transform: scale(.8);
+        margin-left: 5px;
+    }
+}
+
+@media (max-width: 1920px) {
+    .login-form-landing {
+        transform: scale(.9);
+        margin-top: 160px;
+        margin-right: 60px;
+    }
+
+    .signup-form-landing {
+        transform: scale(.9);
+        margin-top: 50px;
+        margin-right: 0px;
     }
 
     .landing-page-forms {
