--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -210,6 +210,65 @@
     }
 }
 
+@media (max-width: 1024px) {
+    .slogan {
+        display: none;
+    }
+
+    .navigation-container {
+        margin: 0 20px;
+    }
+
+    .nav-links {
+        justify-content: left;
+        margin-left: 20px;
+    }
+
+    .nav-login-link {
+        margin-right: 20px;
+        font-size: 15px;
+    }
+
+    .nav-signup-link {
+        font-size: 15px;
+        margin-right: 20px;
+    }
+
+    .nav-login-link-last {
+        font-size: 15px;
+    }
+
+    .nav-logo {
+        margin-left: 0px;
+    }
+
+    .nav-logos {
+        margin-right: 50px;
+    }
+
+    .nav-logo-link {
+        padding: 0 10px;
+    }
+
+    .nav-update {
+        max-width: 150px;
+        min-width: 150px;
+    }
+
+    .search-input {
+        width: 200px;
+    }
+
+    .search-bar-container {
+        margin: 0;
+        padding-right: 30px;
+    }
+
+    .nav-create {
+        width: 150px;
+    }
+}
+
 @media only screen and (max-device-width: 570px) {
     .nav-links {
         justify-content: left;
@@ -220,12 +279,12 @@
 
     .search-bar-container {
         /* display: none; */
-        margin-right: 140px;
+        margin-right: 120px;
         width: 100px;
     }
 
     .search-input {
-        width: 200px;
+        width: 180px;
     }
 
     .nav-logo {
