--- a/react-app/src/components/SinglePost/SinglePost.css
+++ b/react-app/src/components/SinglePost/SinglePost.css
@@ -110,21 +110,32 @@
     }
 
     .single-post-img {
-        height: 330px;
+        height: 430px;
         width: 600px;
         margin: 0 auto;
     }
 
     .comments-content {
-        height: 298px;
+        height: 498px;
     }
 
     .single-post-page-container {
         padding-bottom: 20px;
+        margin-top: 100px;
+    }
+
+    .single-post-page {
+        width: 650px;
+    }
+
+    .single-post-page-container {
+        width: 1200px;
+        height: 1000px;
+        margin-bottom: 100px;
     }
 }
 
-@media (min-width: 571px) and (max-width: 1280px) {
+/* @media (min-width: 571px) and (max-width: 799px) {
     .nav-logos {
         margin-right: 0;
     }
@@ -160,10 +171,10 @@
         padding-top: 30px;
         border: none;
     }
-}
+} */
 
 @media only screen and (max-device-width: 570px) {
-    .single-post-page-container {
+    /* .single-post-page-container {
         width: 1000px;
         margin: 0 auto;
     }
@@ -188,5 +199,25 @@
 
     .single-post-page-container {
         padding-bottom: 20px;
+    } */
+
+    .single-post-content-container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .comments-content {
+        margin-top: 60px;
+    }
+
+    .single-post-page-container {
+        height: auto;
+        width: 800px;
+        margin-left: 90px;
+    }
+
+    .single-post-title {
+        text-align: center;
     }
 }
